# pdf-viewer

./: .gitignore  README.md  package-lock.json  package.json  pdfium-exchange-pdf.js.md  vite.config.js
.claude/plans/: konva-migration-handoff.md
.claude/review/: SKILL.md
.claude/review-fix-loop/: PlanLoop.md  SKILL.md
.claude/skills/review-fix-loop/: ImplementationLoop.md
.github/workflows/: release-tauri.yml  test.yml
coverage/: clover.xml  convert.js.html  coverage-final.json  index.html  pdfToMarkdown.js.html
docs/plan/: manual-test-2026-04-26-execution.md  manual-test-2026-04-26-handover.md  manual-test-plan-2026-04-26.md  markitdown-integration.md  review-fixes-2026-04-26.md
docs/plans/: shadow-top-pan-fix.md
scripts/: check-manual-fixtures.js  spike-pdfjs-api.mjs
src/: app.js  bookEdge.js  index.html  pdfUtils.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  renderer.rs
src/markdown/: convert.js  pdfToMarkdown.js
tests/: api_request_if_master_v4r5.md  api_request_if_v4r7.md  book-edge.test.js  pdf-viewer.test.js  pdfium-renderer.test.js
tests/markdown/: convert.test.js  pdfToMarkdown.test.js
