[package]
name = "app"
version = "0.1.0"
description = "PDF Viewer with PDF.js"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
pdfium-render = { version = "0.8", features = ["sync", "thread_safe"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }

